signin 페이지 추가 및 라우터 기능 추가

--- a/html/header.html
+++ b/html/header.html
@@ -9,7 +9,7 @@
     <div class="sub-menu">
         <ul class="menu">
             <li>
-                <a href="/signin">Sign In</a>
+                <a href="javascript:void(0)" onclick="pageRouter('../html/signin.html')">Sign In</a>
             </li>
             <li>
                 <a href="javascript:void(0)">My Starbucks</a>
