--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     <!--ScrollMagic-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js"></script>
 
-    <link rel="stylesheet" href="../css/main.css" />
-    <link rel="stylesheet" href="./css/common.css" />
+    <!-- <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="../css/common.css" /> -->
     <script def src="./js/common.js"></script>
 </head>
 <body>
